# NanoEval

./: .gitignore  README.md  pyproject.toml
benchmarks/: benign_capability_prompts.jsonl  bias_templates.jsonl  pii_test_cases.jsonl  safety_critical_prompts.jsonl
scripts/: generate_safety_prompts.py
src/nanoeval/: cli.py
src/nanoeval/core/: evaluator.py  model_loader.py  pipeline.py
src/nanoeval/evaluators/distillation/: safety_preservation.py
src/nanoeval/evaluators/standard/: refusal_rate.py
src/nanoeval/loaders/: huggingface_loader.py  llama_cpp_loader.py
tests/: test_distillation.py  test_full_pipeline.py  test_gguf_loader.py  test_hf_loader.py
