[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoeval"
version = "0.1.0"
description = "The Safety Certification Standard for Distilled & Edge-Deployed AI"
readme = "README.md"
authors = [
  { name = "MsChenoO", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]
gpu = [
    "accelerate>=0.20.0",
    "bitsandbytes>=0.40.0",
]
quantization = [
    "llama-cpp-python>=0.2.0",
    "auto-gptq>=0.4.0",
]

[project.scripts]
nanoeval = "nanoeval.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
